--- a/simaenaga.html
+++ b/simaenaga.html
@@ -140,7 +140,7 @@
             <span style="font-family: 'Kiwi Maru', serif;"><span style="font-size:180%"><p>「シマエナガさんの<br />こな雪ポルボローネ」</p></span>
 			<span class="fragment"><img src="https://th.bing.com/th/id/R.9852cb62f9fe2e3aba2a4cc88ef2efcc?rik=Y6406mlV0lmCbg&riu=http%3a%2f%2fhase-seika.co.jp%2fwp%2fwp-content%2fuploads%2f2021%2f08%2fIMG_3122.jpg&ehk=qslJjqT17%2bPB2pB6s3KJvNOCrpZ02eW8Jkc4Hq9t3As%3d&risl=&pid=ImgRaw&r=0" width="70%">
           </section>  
-		  <section style="text-align: left">
+		  <section style="text-align: left" data-background=https://th.bing.com/th/id/R.9852cb62f9fe2e3aba2a4cc88ef2efcc?rik=Y6406mlV0lmCbg&riu=http%3a%2f%2fhase-seika.co.jp%2fwp%2fwp-content%2fuploads%2f2021%2f08%2fIMG_3122.jpg&ehk=qslJjqT17%2bPB2pB6s3KJvNOCrpZ02eW8Jkc4Hq9t3As%3d&risl=&pid=ImgRaw&r=0 data-background-opacity="0.5">
 		 <span style="font-family: 'Kiwi Maru', serif;"><span style="font-size:180%"><p>「シマエナガさんのこな雪ポルボローネ」概要</p></span> 
 		  <hr />
 			 <ul>
@@ -150,7 +150,7 @@
 		   <li class="fragment">シマエナガのオリジナルフォトカード付</li>
           </section>
 
-          <section>
+          <section data-background=https://th.bing.com/th/id/R.9852cb62f9fe2e3aba2a4cc88ef2efcc?rik=Y6406mlV0lmCbg&riu=http%3a%2f%2fhase-seika.co.jp%2fwp%2fwp-content%2fuploads%2f2021%2f08%2fIMG_3122.jpg&ehk=qslJjqT17%2bPB2pB6s3KJvNOCrpZ02eW8Jkc4Hq9t3As%3d&risl=&pid=ImgRaw&r=0 data-background-opacity="0.5">
             <span style="font-size:150%"><span style="font-family: 'Kiwi Maru', serif;"><p>一番の萌えポイントは<br /><span class="fragment">ポルボローネ1個が約8g</span></p>
 			<span class="fragment"><p class="fragment grow">シマエナガと同じ重さ</p></span>
           </section>
