--- a/simaenaga.html
+++ b/simaenaga.html
@@ -123,7 +123,7 @@
             <span style="font-family: 'Kiwi Maru', serif;"><span style="font-size:180%"><p>シマエナガだんごとは？</p></span>
             <hr />
             <p class="fragment">シマエナガの赤ちゃんが枝に並んで、親鳥がエサを運んでくれるのを待つ姿のこと</p>
- <span class="fragment"><span style="text-align: center"><img src="https://api.mediacms.jp/uploads/20220627_takeshiho_photo_1ed8d94cdf.jpg" width="70%"></span>
+ <span class="fragment"><img src="https://api.mediacms.jp/uploads/20220627_takeshiho_photo_1ed8d94cdf.jpg" width="70%">
         </section>
 		<section style="text-align: left">
             <span style="font-family: 'Kiwi Maru', serif;"><p>基本的にはシマエナガの赤ちゃんが見せる姿だが、ごく稀にこのような姿も…</p>
